# trade-alpha-backend

./: .gitignore  main.py  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0856da4f1911_clear.py  0b86b2e9d925_add_info_and_about_me_cols_to_user.py  150590cb8130_make_init_balance_not_null.py  16c917fc83ca_change_unrealized_col.py  21a8724671d8_add_label_group.py  358424d1dd1c_reintroduce_coin_column_in_transfer.py  4baacbf738d6_add_transfer_id_to_exec.py  76728ce5b2dc_add_wildcards_to_authgrant.py  8c304830d9af_redo_evententry_and_score_schemas.py  a8e101b2ffbf_increase_currency_length_on_amount_add_.py  c75fd142c203_remove_rekt_on_from_client_and_add_.py  c95386a9c812_add_delay_to_actions.py  d019cbe0748b_advanced_template_schema.py  d1f13f442d97_change_platform_structure.py  e845d16188d5_remove_unnecessary_transfer_cols.py  eee37086c3b9_rename_bybit.py  f0698bc63edd_add_close_time_on_trade.py  f6be99aae636_revisit_action_ddl.py  fa3c22038e23_add_about_me_to_user.py
lib/: pyproject.toml
lib/common/: pyproject.toml
lib/common/common/: messenger.py
lib/core/: pyproject.toml
lib/core/core/: __init__.py  env.py  (+2 more)
lib/database/: init_db.py  pyproject.toml
lib/db/: calc.py  dbsync.py  utils.py
lib/exchanges/: __init__.py  exchange.py
lib/lib/: env.py  messenger.py
lib/models/: async_websocket_manager.py  authgrant.py  balance.py  eventinfo.py  observer.py  page.py  ticker.py  user.py
lib/test_utils/: fixtures.py
projects/api/: Dockerfile  __main__.py  pyproject.toml
projects/bot/: Dockerfile  __main__.py  pyproject.toml
projects/collector/: Dockerfile  __main__.py  pyproject.toml
tools/: docker.py  init_db.py  messages.py  reset.py
(+252 files in other folders)
