[tool.poetry]
name = "tradealpha"
version = "0.1.0"
description = "Social Journaling and Analytics Platform for Traders"
authors = ["jacksn"]
packages = [
  { include = "projects" }
] 


[tool.poetry.dependencies]
python = ">=3.10, <3.11"
api = {path = "projects/api", develop = true}
collector = {path = "projects/collector", develop = true}
bot = {path = "projects/bot", develop = true}
toml = "^0.10.2"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[tool.poetry.scripts]
api = "projects.api.__main__:run"
bot = "projects.bot.__main__:run"
collector = "projects.collector.__main__:run"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.2"
ruff = "0.0.284"
black = "^23.7.0"

[tool.ruff]
exclude = ["alembic"]
ignore = ["E501", "F821", "F403", "F405"]


[tool.black]
line-length = 88
exclude = "alembic"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
